[metadata]
name = infracheck
author = RiotKit Collective
author_email = marek_andrzejczak@riseup.net
summary = KISS healthcheck implemented in Python and Bash
license = MIT
description-file = DESCRIPTION.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/riotkit-org/infracheck
python_requires = >=3.5
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities
    Topic :: System :: Systems Administration

[files]
packages = infracheck

[entry_points]
console_scripts =
    infracheck = infracheck:main
